--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ on:
 jobs:
   tarefa1: 
     name: Primeira tarefa
+    needs: tarefa3
     runs-on: ubuntu-latest
     steps: 
       - name: Passo 1 
@@ -29,6 +30,7 @@ jobs:
 
   tarefa2: 
       name: Segunda tarefa
+      needs: tarefa1
       runs-on: ubuntu-latest
       steps: 
       - name: Passo 4 
@@ -41,6 +43,7 @@ jobs:
 
   tarefa3: 
       name: Terceira tarefa
+      needs: tarefa2
       runs-on: ubuntu-latest
       steps: 
       - name: Passo 7 
